--- a/app/src/main/res/drawable/custom_progress_bar.xml
+++ b/app/src/main/res/drawable/custom_progress_bar.xml
@@ -1,20 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <corners android:radius="12dp"/>
-            <solid android:color="#F0F2F5"/>
+            <corners android:radius="10dp" />
+            <solid android:color="#E2E8F0" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <corners android:radius="12dp"/>
-                <gradient
-                    android:startColor="#4285F4"
-                    android:endColor="#6200EA"
-                    android:angle="0"/>
-            </shape>
+                <corners android:radius="10dp" />
+                <solid android:color="#2563EB" /> </shape>
         </clip>
     </item>
 </layer-list>
